Fixed box-shadow issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -946,6 +946,7 @@ button.vote:active {
 @media only screen and (max-width: 590px) {
   #Search {
     top: 20%;
+    background: #ffffff;
   }
 }
 
